<resources>
    <string name="app_name">Desafio03</string>
    <string name="welcome_marvel">Welcome to the Marvel HQ\'s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">LOG IN</string>
    <string name="chkbox_remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="prompt_name">Name</string>
    <string name="action_save">SAVE</string>
    <string name="dummy_comic">#100</string>
    <string name="ac_details_pages">Pages: </string>
    <string name="ac_details_price">Price: $</string>
    <string name="ac_details_published">Published: </string>
    <string name="dummy_text">XXXXXXXXX</string>
</resources>