<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="120dp"
        app:cardBackgroundColor="@color/marvelRed"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/welcome_marvel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/chkbox_remember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chkbox_remember"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_log_in"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="7dp"
                    android:text="@string/create_account"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</ScrollView>