<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context=".AccountActivity">

    <LinearLayout
        android:id="@+id/aa"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_login_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="@drawable/round_login_body"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chkbox_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chkbox_remember"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:text="@string/action_log_in"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/aa"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-260dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>